# rexize

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: python-app.yml
resize_imgs/: __init__.py  cli.py  file_iterator.py  image_manipulator.py
src/: __init__.py  base_extension.py  cli.py  console.py  extension_manager.py  file_iterator.py  image.py  image_manipulator.py  main.py
src/extension/: grayscale.py  normalize_exposure.py  rgb.py
tests/: test_cli_argparser.py  test_extension_manager.py  test_file_iterator.py  test_image_manipulator.py
tests/data/: sample_config.json
