[tool.poetry]
name = "resize-imgs"
version = "0.1.0"
description = "CLI to bulk resize and convery images recursively"
authors = ["Joseph Lee <joel@joeworks.com>"]
readme = "README.md"

[tool.poetry.scripts]
resize_imgs = "main:main"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
icecream = "^2.1.3"
pytest-cov = "^4.1.0"
pre-commit = "^3.6.2"
flake8 = "^7.0.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --color=auto --cov --cov-report term-missing"
testpaths = [
    "tests",
]
pythonpath = [
    "resize_imgs",
]

[tool.black]
line-length = 88
target-version = ["py311"]
include =  "(\\.pyi?|\\.ipynb)$"
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.__pycache__
  |\.pytest_cache
  |Dockerfile
)/
'''
